# etl_coding_interview_template

./: .gitignore  README.md  etl_coding_interview.sln  pyproject.toml
data/: formats.md
data/contacts/: ms_14489.csv  ms_22025.csv  tp_123ab.csv
data/emails/: emails.csv
dotnet_project/: Orchestrator.cs  Program.cs  README.md
dotnet_project/Properties/: launchSettings.json
dotnet_project/Sinks/: ISink.cs  TextFileSink.cs
dotnet_project/Sources/: CsvSource.cs  ISource.cs
dotnet_project/Transformers/: BasicTransformer.cs  ITransformer.cs
python_project/: README.md  example.py
python_project/src/: orchestrator.py
python_project/src/sinks/: text_sink.py
python_project/src/sources/: csv_source.py
python_project/src/transformers/: basic_transformers.py
